--- a/styles/tagged-posts.scss
+++ b/styles/tagged-posts.scss
@@ -1,10 +1,13 @@
-@import "global";
+@import 'global';
 
 body {
     background-color: var(--bg);
     color: var(--fg);
     display: flex;
     flex-direction: column;
+    & > .post + .post {	
+        margin-top: var(--flow-space, 1.5em);	
+    }
 }
 
 .blog-content {
@@ -13,6 +16,20 @@ body {
     justify-content: space-between;
     flex: 1;
     margin: 0 auto;
+    
+    @media (max-width: $breakpoint-md) {
+        margin: 1rem;
+    }
+
+    @import 'categories';
+
+    &-right {
+        flex: 1;
+    }
+
+    & > .post + .post {
+        margin-top: var(--flow-space, 1.5em);
+    }
 
     .breadcrumbs {
         display: inline-flex;
@@ -30,7 +47,7 @@ body {
                 color: #37be72;
             }
             &:not(:last-child) a::after {
-                content: "→";
+                content: '→';
                 padding-left: 0.5rem;
                 display: inline-block;
             }
@@ -41,20 +58,8 @@ body {
         }
     }
 
-    @media (max-width: $breakpoint-md) {
-        margin: 1rem;
-    }
-
-    @import "categories";
-
-    &-right {
-        flex: 1;
-    }
-
     .title {
-        font-size: var(--font-size-xl);
-        line-height: 1.3;
-        text-transform: capitalize;
+        font-size: var(--font-size-xxl);
     }
 
     .subtitle {
@@ -116,6 +121,7 @@ body {
                 max-width: 50ch;
                 font-size: var(--font-size-md);
                 text-decoration: underline;
+                text-decoration-thickness: 2.2px;
             }
             .snippet {
                 max-width: 40ch;
