--- a/category-pages.liquid
+++ b/category-pages.liquid
@@ -13,6 +13,7 @@ pagination:
 layout: tagged-posts.liquid    
 eleventyComputed:
   title: "{{ category.title }}"
+  isCategoryPage: true
   eleventyNavigation:
    title: "{{ category.title }}"
    key: "{{ category.title }}"
@@ -20,26 +21,30 @@ eleventyComputed:
 permalink: /category/{{ category.slug }}/
 ---
 {% assign taggedCollections = collections[category] %}
-{% assign posts = collections.blogposts | include: "data.categories", category.title %}
+{% assign posts = collections.blogposts
+    | include: 'data.categories', category.title
+%}
 {% for post in posts %}
-  <div class="post">
-    <div class="left">
-      <img src="{{ post.data.imagePath }}" alt="">
+    <div class="post">
+        <div class="left">
+            <img src="{{ post.data.imagePath }}" alt="">
+        </div>
+        <div class="right">
+            <div class="top">
+                <p class="date">{{ post.date | date: '%B %e, %Y' }}</p>
+                <a href="{{ post.url }}">
+                    <h2>{{ post.data.title }}</h2>
+                </a>
+                <p class="snippet" title="{{ post.data.snippet }}">
+                    {{ post.data.snippet }}
+                </p>
+            </div>
+            <div class="tags">
+                {% assign tagsList = post.data.tags | removeDefaultTags %}
+                {% for tag in tagsList %}
+                    <a href="/tag/{{tag | slugify}}" class="tag">#{{ tag }}</a>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-    <div class="right">
-      <div class="top">
-        <p class="date">{{ post.date | date: '%B %e, %Y' }}</p>
-        <a href="{{ post.url }}">
-          <h2>{{ post.data.title }}</h2>
-        </a>
-        <p class="snippet" title="{{ post.data.snippet }}">{{ post.data.snippet }}</p>
-      </div>
-      <div class="tags">
-        {% assign tagsList = post.data.tags | removeDefaultTags %}
-        {% for tag in tagsList %}
-          <a href="/tag/{{tag | slugify}}" class="tag">#{{tag}}</a>
-        {% endfor %}
-      </div>
-    </div>
-  </div>
 {% endfor %}
