--- a/tag-pages.liquid
+++ b/tag-pages.liquid
@@ -13,6 +13,7 @@ pagination:
 layout: tagged-posts.liquid    
 eleventyComputed:
   title: Tutti gli articoli di "{{ tag }}"
+  isTagsPage: true
   eleventyNavigation:
    title: Tutti gli articoli di "{{ tag }}"
    key: Tutti gli articoli di "{{ tag }}"
