--- a/_includes/tagged-posts.liquid
+++ b/_includes/tagged-posts.liquid
@@ -30,7 +30,11 @@ navOptions:
                 {% include 'breadcrumbs' %}
             </div>
             <h1 class="title">{{ title }}</h1>
-            <p class="subtitle">Vedi i seguenti articoli</p>
+            {% if isCategoryPage %}
+                {% assign defaultDesc = metadesc %}
+                {% assign metadesc = categoriesDescriptions[title] | getDescription: "Vedi i seguenti articoli" %}
+                <p class="subtitle">{{metadesc}}</p>
+            {% endif %}
             {{content}}
         </div>
     </main>
